# tarantool-rs

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: bench.rs  compare.rs  simple_loop.rs
examples/: call.rs  cli_client.rs  schema.rs  sql.rs  transactions.rs
src/: builder.rs  channel.rs  connection.rs  connection_like.rs  errors.rs  lib.rs  main.rs  stream.rs  transaction.rs  transport.rs  tuple.rs
src/client/: builder.rs  call_response.rs  connection.rs  connection_like.rs  dmo_response.rs  executor.rs  executor_ext.rs  mod.rs  prepared_sql_statement.rs  stream.rs  transaction.rs  tuple_response.rs
src/client/dmo/: mod.rs  operation.rs
src/client/schema/: index.rs  mod.rs  space.rs
src/client/sql/: mod.rs  prepared_statement.rs  response.rs
src/codec/: consts.rs  mod.rs  utils.rs
src/codec/request/: auth.rs  begin.rs  call.rs  commit.rs  delete.rs  eval.rs  execute.rs  id.rs  insert.rs  mod.rs  ping.rs  prepare.rs  replace.rs  rollback.rs  select.rs  update.rs  upsert.rs
src/codec/response/: call.rs  mod.rs
src/schema/: index.rs  mod.rs  space.rs
src/transport/: connection.rs  dispatcher.rs  mod.rs
src/utils/: cancellable_future.rs  deser.rs  mod.rs  unique_id_name_map.rs
tarantool-test-container/: Cargo.toml
tarantool-test-container/src/: lib.rs
tests/: integration.rs  test_data.lua
tests/common/: image.rs  mod.rs
