[package]
name = "tarantool-rs"
description = "Asyncronous tokio-based client for Tarantool"
version = "0.0.0"
edition = "2021"
authors = ["Andrey Kononov flowneee3@gmail.com"]
license = "MIT"
keywords = ["tarantool"]
categories = ["database"]
readme = "README.md"
repository = "https://github.com/Flowneee/tarantool-rs"

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
futures = "0.3"
rmp = "0.8"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.10.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
