[package]
name = "tarantool-rs"
description = "Asyncronous tokio-based client for Tarantool"
version = "0.0.8"
edition = "2021"
authors = ["Andrey Kononov flowneee3@gmail.com"]
license = "MIT"
keywords = ["tarantool"]
categories = ["database"]
readme = "README.md"
repository = "https://github.com/Flowneee/tarantool-rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backoff = "0.4"
base64 = "0.21"
bytes = "1"
futures = "0.3"
lru = "0.11"
parking_lot = { version = "0.12", features = ["send_guard"] }
rmp = "0.8"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
sha-1 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_matches = "1.5"
clap = { version = "4", features = ["derive"] }
maplit = "1"
pretty_env_logger = "0.5"
rustyline = "11"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tarantool-test-container = { path = "tarantool-test-container" }

[[example]]
name = "cli_client"

[[example]]
name = "schema"

[[example]]
name = "transactions"

[[example]]
name = "call"

[workspace]
members = [
    "tarantool-test-container",
]
